integrated blockly into Angular

--- a/xlogo/angular.json
+++ b/xlogo/angular.json
@@ -30,7 +30,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/blockly/blockly_compressed.js",
+              "node_modules/blockly/blocks_compressed.js",
+              "node_modules/blockly/msg/js/en.js",
+              "src/assets/blockly/custom_blocks.js"
+            ]
           },
           "configurations": {
             "production": {
