addded a test block

--- a/xlogo/angular.json
+++ b/xlogo/angular.json
@@ -32,9 +32,10 @@
             ],
             "scripts": [
               "node_modules/blockly/blockly_compressed.js",
+              "node_modules/blockly/javascript_compressed.js",
               "node_modules/blockly/blocks_compressed.js",
               "node_modules/blockly/msg/js/en.js",
-              "src/assets/blockly/custom_blocks.js"
+              "src/assets/blockly/alert/alert.js"
             ]
           },
           "configurations": {
